--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
+  "bin": "main.js", 
   "publishConfig": {
     "access": "public"
   },
-  "bin": {
-    "grade": "main.js"
-  },
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
